Archive2/3e/14274e87dd8f76/output
main.cpp:2:5: error: static_assert failed ""
    static_assert(0 == '0', "");   
    ^             ~~~~~~~~
1 error generated.
